--- a/packages/umi-plugin-locale-paik/examples/base/src/locale/en-US.json
+++ b/packages/umi-plugin-locale-paik/examples/base/src/locale/en-US.json
@@ -6,5 +6,6 @@
 	"text-global2": "dd2",
 	"text-global233": "dd233",
 	"title-global2s": "global-title2",
-	"text-global2333": "dd2333"
+	"text-global2333": "dd2333",
+	"title-temp": "global-title temp"
 }
