--- a/packages/umi-plugin-locale-paik/examples/base/src/locale/zh-CN.json
+++ b/packages/umi-plugin-locale-paik/examples/base/src/locale/zh-CN.json
@@ -6,5 +6,6 @@
 	"text-global2": "全局文2",
 	"text-global233": "全局文233",
 	"title-global2s": "全局标题2",
-	"text-global2333": "全局文2333"
+	"text-global2333": "全局文2333",
+	"title-temp": "全局标题 temp"
 }
