--- a/packages/umi-plugin-locale-paik/examples/base/src/locale/zh-TW.json
+++ b/packages/umi-plugin-locale-paik/examples/base/src/locale/zh-TW.json
@@ -6,5 +6,6 @@
 	"text-global2": "全域性文2",
 	"text-global233": "全域性文233",
 	"title-global2s": "全域性標題2",
-	"text-global2333": "全域性文2333"
+	"text-global2333": "全域性文2333",
+	"title-temp": "全域性標題 temp"
 }
