--- a/packages/umi-plugin-locale-paik/docs/v3.0.0.md
+++ b/packages/umi-plugin-locale-paik/docs/v3.0.0.md
@@ -1,8 +1,8 @@
 # 3.0.x 更新日志
 
 **`messages`不再遵循 `singular`规则，始终为`messages`, 单数形式将不再被识别，即不能提取`message`里国际化数据**
-## v3.0.3
-同步官方版本更新 
+
++ 同步官方版本更新 
 +  官方版本遗弃`umi/locale`形式，改用 `umi-plugin-react/locale` [#1657](https://github.com/umijs/umi/issues/1675), 由于本插件未与`umi-plugin-react`耦合，故新增alias, 以免使用者通过新方式使用到了官方的代码
 +  `umi/locale` 新增 `formatHTMLMessage` 
 +  ``
@@ -15,7 +15,7 @@
 + umi buld 结束后，会对lang 文件夹下的json文件进行`JSON.stringify`, 减少一丁点体积(蚊子腿)
 
 ## 配置 options
-新版本使用新的配置结构，更加结构化
+3.x 版本使用新的配置结构，更加结构化
 ```javascript
 {
   locale:{
