--- a/packages/umi-plugin-locale-paik/examples/base/public/lang/zh-HK/dd.json
+++ b/packages/umi-plugin-locale-paik/examples/base/public/lang/zh-HK/dd.json
@@ -1,4 +1,6 @@
 {
 	"tests-ssdddd": "hahsahddha",
-	"tests-ssdd": "hahsahha"
+	"tests-ssdd": "hahsahha",
+	"tests-ssddss": "hahsahhass",
+	"tests-ssddsssddss": "明天來拉我,要得不s"
 }
