feat: #3; add autoIntl config support

--- a/packages/umi-plugin-locale-paik/docs/v3.1.0.md
+++ b/packages/umi-plugin-locale-paik/docs/v3.1.0.md
@@ -2,6 +2,26 @@
 
 + 新增：增加动态国际化数据从远程获取
 + 新增：`umi/withIntl` 提供 compose, parseArguments 两个函数
++ 新增：自动提取国际化数据
+
+## 自动提取国际化数据 3.1.8开始启用
+> 此过程耗时不可控，请耐心等待~~~
+1. 通过设置属性值：`autoIntl: true`,设置后会随 `umi dev` 启动，自动提取国际化数据
+```js
+[
+    'umi-plugin-locale-paik',
+    {
+      ...
+      autoIntl: true,
+    },
+  ],
+```
+
+2. 通过命令监听文件变化
+
+```sh
+npx paik-intl start
+```
 
 ## withIntl
 withIntl 高阶函数增加options参数，默认如下
